// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Heading Default 1`] = `
.c0 {
  --bg-opacity: 1;
  background-color: rgba(255,255,255,var(--bg-opacity));
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
  border-bottom-width: 1px;
  --border-opacity: 1;
  border-color: rgba(229,231,235,var(--border-opacity));
}

.c1 {
  margin-left: -1rem;
  margin-top: -1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  margin-left: 1rem;
  margin-top: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 500;
  --text-opacity: 1;
  color: rgba(22,30,46,var(--text-opacity));
}

.c4 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(107,114,128,var(--text-opacity));
}

.c5 {
  margin-left: 1rem;
  margin-top: 1rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width:640px) {
  .c0 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:640px) {
  .c1 {
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className=""
      >
        <h3
          className="c3"
        >
          Title
        </h3>
        <p
          className="c4"
        >
          Subtitle
        </p>
      </div>
    </div>
    <div
      className="c5"
    />
  </div>
</div>
`;

exports[`Storyshots Molecules/Heading Title Only 1`] = `
.c0 {
  --bg-opacity: 1;
  background-color: rgba(255,255,255,var(--bg-opacity));
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
  border-bottom-width: 1px;
  --border-opacity: 1;
  border-color: rgba(229,231,235,var(--border-opacity));
}

.c1 {
  margin-left: -1rem;
  margin-top: -1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  margin-left: 1rem;
  margin-top: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 500;
  --text-opacity: 1;
  color: rgba(22,30,46,var(--text-opacity));
}

.c4 {
  margin-left: 1rem;
  margin-top: 1rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width:640px) {
  .c0 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:640px) {
  .c1 {
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className=""
      >
        <h3
          className="c3"
        >
          Title
        </h3>
      </div>
    </div>
    <div
      className="c4"
    />
  </div>
</div>
`;

exports[`Storyshots Molecules/Heading With Actions 1`] = `
.c8 svg {
  height: 1.25rem;
  width: 1.25rem;
  --text-opacity: 1;
  color: rgba(55,65,81,var(--text-opacity));
}

.c9 {
  margin-left: -0.25rem;
  margin-right: 0.5rem;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border-width: 1px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 500;
  border-radius: 0.375rem;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  --border-opacity: 1;
  border-color: rgba(210,214,220,var(--border-opacity));
  --text-opacity: 1;
  color: rgba(55,65,81,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(255,255,255,var(--bg-opacity));
}

.c7:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.c7:hover {
  --text-opacity: 1;
  color: rgba(107,114,128,var(--text-opacity));
}

.c7:focus {
  --border-opacity: 1;
  border-color: rgba(164,202,254,var(--border-opacity));
  box-shadow: 0 0 0 3px rgba(164,202,254,0.45);
}

.c7:active {
  --text-opacity: 1;
  color: rgba(37,47,63,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(249,250,251,var(--bg-opacity));
}

.c0 {
  --bg-opacity: 1;
  background-color: rgba(255,255,255,var(--bg-opacity));
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
  border-bottom-width: 1px;
  --border-opacity: 1;
  border-color: rgba(229,231,235,var(--border-opacity));
}

.c1 {
  margin-left: -1rem;
  margin-top: -1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  margin-left: 1rem;
  margin-top: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 500;
  --text-opacity: 1;
  color: rgba(22,30,46,var(--text-opacity));
}

.c4 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(107,114,128,var(--text-opacity));
}

.c5 {
  margin-left: 1rem;
  margin-top: 1rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  margin-left: 0.75rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 0.375rem;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.c6:first-child {
  margin-left: 0;
}

@media (min-width:640px) {
  .c0 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:640px) {
  .c1 {
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className=""
      >
        <h3
          className="c3"
        >
          Title
        </h3>
        <p
          className="c4"
        >
          Subtitle
        </p>
      </div>
    </div>
    <div
      className="c5"
    >
      <span
        className="c6"
      >
        <button
          className="c7"
          color="white"
          type="button"
        >
          <div
            className="c8 c9"
            color="white"
          >
            <svg
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
              />
            </svg>
          </div>
          Phone
        </button>
      </span>
      <span
        className="c6"
      >
        <button
          className="c7"
          color="white"
          type="button"
        >
          <div
            className="c8 c9"
            color="white"
          >
            <svg
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
              />
            </svg>
          </div>
          Mail
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Heading With Image 1`] = `
.c4 {
  display: inline-block;
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 9999px;
}

.c0 {
  --bg-opacity: 1;
  background-color: rgba(255,255,255,var(--bg-opacity));
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
  border-bottom-width: 1px;
  --border-opacity: 1;
  border-color: rgba(229,231,235,var(--border-opacity));
}

.c1 {
  margin-left: -1rem;
  margin-top: -1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  margin-left: 1rem;
  margin-top: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 {
  margin-left: 1rem;
}

.c6 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 500;
  --text-opacity: 1;
  color: rgba(22,30,46,var(--text-opacity));
}

.c7 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(107,114,128,var(--text-opacity));
}

.c8 {
  margin-left: 1rem;
  margin-top: 1rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media (min-width:640px) {
  .c0 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:640px) {
  .c1 {
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <img
          alt="Avatar"
          className="c4"
          src="/img/avatar_placeholder.png"
        />
      </div>
      <div
        className="c5"
      >
        <h3
          className="c6"
        >
          Title
        </h3>
        <p
          className="c7"
        >
          Subtitle
        </p>
      </div>
    </div>
    <div
      className="c8"
    />
  </div>
</div>
`;

exports[`Storyshots Molecules/Heading With Image And Actions 1`] = `
.c11 svg {
  height: 1.25rem;
  width: 1.25rem;
  --text-opacity: 1;
  color: rgba(55,65,81,var(--text-opacity));
}

.c12 {
  margin-left: -0.25rem;
  margin-right: 0.5rem;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.375rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  border-width: 1px;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 500;
  border-radius: 0.375rem;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  --border-opacity: 1;
  border-color: rgba(210,214,220,var(--border-opacity));
  --text-opacity: 1;
  color: rgba(55,65,81,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(255,255,255,var(--bg-opacity));
}

.c10:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

.c10:hover {
  --text-opacity: 1;
  color: rgba(107,114,128,var(--text-opacity));
}

.c10:focus {
  --border-opacity: 1;
  border-color: rgba(164,202,254,var(--border-opacity));
  box-shadow: 0 0 0 3px rgba(164,202,254,0.45);
}

.c10:active {
  --text-opacity: 1;
  color: rgba(37,47,63,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(249,250,251,var(--bg-opacity));
}

.c4 {
  display: inline-block;
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 9999px;
}

.c0 {
  --bg-opacity: 1;
  background-color: rgba(255,255,255,var(--bg-opacity));
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
  border-bottom-width: 1px;
  --border-opacity: 1;
  border-color: rgba(229,231,235,var(--border-opacity));
}

.c1 {
  margin-left: -1rem;
  margin-top: -1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  margin-left: 1rem;
  margin-top: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 {
  margin-left: 1rem;
}

.c6 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 500;
  --text-opacity: 1;
  color: rgba(22,30,46,var(--text-opacity));
}

.c7 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(107,114,128,var(--text-opacity));
}

.c8 {
  margin-left: 1rem;
  margin-top: 1rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  margin-left: 0.75rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 0.375rem;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.05);
}

.c9:first-child {
  margin-left: 0;
}

@media (min-width:640px) {
  .c0 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:640px) {
  .c1 {
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <img
          alt="Avatar"
          className="c4"
          src="/img/avatar_placeholder.png"
        />
      </div>
      <div
        className="c5"
      >
        <h3
          className="c6"
        >
          Title
        </h3>
        <p
          className="c7"
        >
          Subtitle
        </p>
      </div>
    </div>
    <div
      className="c8"
    >
      <span
        className="c9"
      >
        <button
          className="c10"
          color="white"
          type="button"
        >
          <div
            className="c11 c12"
            color="white"
          >
            <svg
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
              />
            </svg>
          </div>
          Phone
        </button>
      </span>
      <span
        className="c9"
      >
        <button
          className="c10"
          color="white"
          type="button"
        >
          <div
            className="c11 c12"
            color="white"
          >
            <svg
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
              />
            </svg>
          </div>
          Mail
        </button>
      </span>
    </div>
  </div>
</div>
`;
